force-app/main/default/objects/CCR_QureProcess__mdt/CCR_QureProcess__mdt.object-meta.xml
<CustomObject>
    <description>This is object is used to drive the user that activation of Qure , Limited Edition and to check online block of device</description>
    <label>CCR Qure Process</label>
    <pluralLabel>CCR Qure Processes</pluralLabel>
</CustomObject>