force-app/main/default/objects/CCR_QureProcess__mdt/fields/CCR_Country__c.field-meta.xml
<CustomField>
    <fullName>CCR_Country__c</fullName>
    <description>this field is used to hold the country of qure</description>
    <label>Country</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>