force-app/main/default/objects/CCR_QureProcess__mdt/fields/CCR_GrandType__c.field-meta.xml
<CustomField>
    <fullName>CCR_GrandType__c</fullName>
    <description>this field is used to hold the value of type what he has access</description>
    <label>Grand Type New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qure Enable</fullName>
                <default>true</default>
                <label>Qure Enable</label>
            </value>
            <value>
                <fullName>Block Sequential Qure</fullName>
            </value>
            <value>
                <fullName>Check Limited Edition</fullName>
            </value>
            <value>
                <fullName>Block Sequential Qure by Consumer</fullName>
            </value>
            <value>
                <fullName>Enable Override</fullName>
            </value>
            <value>
                <fullName>Enable Swap For Local Market</fullName>
            </value>
            <value>
                <fullName>Show Replacement Count Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>