force-app/main/default/objects/CCR_QureProcess__mdt/fields/CCR_TimeforBlockonlineQure__c.field-meta.xml
<CustomField>
    <fullName>CCR_TimeforBlockonlineQure__c</fullName>
    <description>this field is used to hold the value of  hours  for online block of device .</description>
    <label>Time for Block online Qure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>