force-app/main/default/objects/CCR_QureProcess__mdt/fields/CCR_UserType__c.field-meta.xml
<CustomField>
    <fullName>CCR_UserType__c</fullName>
    <description>this field is used to hold the value of type of user who is doing qure</description>
    <label>User Type New</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>