force-app/main/default/objects/CCR_QureProcess__mdt/listViews/PS_ALL.listView-meta.xml
<ListView>
    <fullName>PS_ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CCR_GrandType__c</columns>
    <columns>CCR_UserType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCR_Country__c</field>
        <operation>equals</operation>
        <value>PS</value>
    </filters>
    <label>PS ALL</label>
    <language>en_US</language>
</ListView>